lot-odroid-n2 (0.0.5) unstalbe; urgency=medium

  * API: Implement ios, ostream class
  * API: Implement UART source for Linux

 -- Hyeonki Hong <hhk7734@gmail.com>  Sat, 12 Oct 2019 15:28:54 +0900

lot-odroid-n2 (0.0.4) unstable; urgency=medium

  * API: Test debian package
  * Add basic reg-map and pin-map
  * Add basic digital read/write function

 -- Hyeonki Hong <hhk7734@gmail.com>  Wed, 06 Oct 2019 09:03:00 +0900

lot-odroid-n2 (0.0.3) unstable; urgency=medium

  * API: Test Makefile
  * API: Change source tree
  * API: Add I2C, UART, SPI header

 -- Hyeonki Hong <hhk7734@gmail.com>  Wed, 03 Oct 2019 13:50:00 +0900

lot-odroid-n2 (0.0.2) unstable; urgency=medium

  * API: Add GPIO header, UART interface, Doxyfile

 -- Hyeonki Hong <hhk7734@gmail.com>  Thu, 26 Sep 2019 14:48:00 +0900

lot-odroid-n2 (0.0.1) unstable; urgency=medium

  * API: Initial release.
  * API: Add I2C, SPI, time interface

 -- Hyeonki Hong <hhk7734@gmail.com>  Thu, 22 Sep 2019 22:53:00 +0900